# agentic-ai-lab

./: .env.example  .gitignore  README.md  pyproject.toml
data/: README.md
docs/: langgraph_orchestration_notes.md  publishing.md  session_context.md
src/agents/: arithmetic_tool_agent.py  model_config.py  rag_agent.py  rag_chain.py  sql_agent.py  voice_agent.py  weather_tool_graph.py
src/deep_agents/: __init__.py  research_agent.py
src/multi_agent/: __init__.py  customer_support_handoffs.py  knowledge_base_router.py  personal_assistant.py  skills_sql_assistant.py
src/orchestration/: langgraph_state_machine.py
src/retrieval/: semantic_search.py
src/utils/: demo_io.py  token_usage.py
src/workflows/: langgraph_rag_agent.py  langgraph_sql_agent.py
web/: next.config.ts  package-lock.json  package.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/agents/[slug]/: page.tsx
web/app/blog/: page.tsx
web/app/catalog/: page.tsx
web/app/components/: AgentExplorer.tsx  CurriculumContents.tsx  GlossaryExplorer.tsx  LessonCatalog.tsx  SiteFooter.tsx  SiteHeader.tsx
web/app/contribute/: page.tsx
web/app/glossary/: page.tsx
web/app/learn/[slug]/: page.tsx
web/app/roadmap/: page.tsx
web/lib/: agentBlogs.ts  agents.ts  curriculum.ts  glossary.ts
web/scripts/: build-sites.mjs  generate-favicon.mjs
web/sites/server/: index.js
