[project]
name = "agentic-ai-lab"
version = "0.1.0"
description = "Hands-on examples for learning agents, tools, graphs, retrieval, embeddings, and RAG"
requires-python = ">=3.12"
dependencies = [
  "langchain",
  "langchain-ollama",
  "langchain-openai",
  "langgraph",
  "python-dotenv",
  "jupyter",
  "deepagents>=0.6.12",
  "pypdf>=6.14.2",
  "langchain-text-splitters>=1.1.2",
  "numpy>=2.5.1",
  "langchain-huggingface>=1.2.2",
  "sentence-transformers>=5.6.0",
  "torch>=2.12.1",
]
